--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,4 +1,4 @@
-[webservers]
+[opp-prod]
 poxappprd52b ansible_host=192.168.152.121 ansible_user=root
 poxappprd52c ansible_host=192.168.152.122 ansible_user=root
 poxappprd52d ansible_host=192.168.152.123 ansible_user=root
