--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1,6 +1,6 @@
 ---
 - name: 对所有主机进行 Ping 检测
-  hosts: all          # 作用于 hosts.ini 中定义的所有主机
+  hosts: opp-prod     # 作用于 hosts.ini 中定义的所有主机
   gather_facts: no    # 关闭事实收集以提高执行速度
   
   tasks:
