--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -6,7 +6,6 @@
   tasks:
     - name: 测试连接状态
       ping:
-
   tasks:
     - name: 向 /etc/hosts 追加主机名解析
       blockinfile:
@@ -16,3 +15,44 @@
           160.98.39.18 corprodc03.corp.ha.org.hk
         marker: "#### {mark} ADDED BY OPP ####" # 自定义标记格式
         state: present
+  tasks:
+    - name: 使用 dnf 安装必要的依赖包
+      dnf:
+        name:
+          - gcc
+          - make
+          - openssl
+          - openssl-devel
+          - zlib
+          - zlib-devel
+          - perl-devel
+          - perl-ExtUtils-Embed
+          - net-tools
+          - vim
+          - wget
+          - lrzsz
+        state: present  # 确保这些包都已安装
+  tasks:
+    - name: 使用 dnf 安装必要的依赖包
+      dnf:
+        name:
+          - openldap-clients
+          - openldap-devel
+          - realmd
+          - sssd
+          - sssd-ldap
+          - oddjob-mkhomedir
+          - oddjob
+          - samba-common-tools
+          - sssd-tools
+          - chrony
+          - krb5-libs
+          - krb5-workstation
+          - krb5-devel
+          - libecap
+          - libecap-devel
+          - gnutls-devel
+          - pam-devel
+          - libtdb-devel
+          - libxml2-devel
+        state: present  # 确保这些包都已安装
