--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1,10 +1,9 @@
 ---
-- name: 对所有主机进行 Ping 检测
+- name: install app
   hosts: opp_prod
   gather_facts: no
-  
   tasks:
-    - name: 测试连接状态
+    - name: ping
       ping:
     - name: 向 /etc/hosts 追加主机名解析
       blockinfile:
@@ -14,7 +13,7 @@
           160.98.39.18 corprodc03.corp.ha.org.hk
         marker: "#### {mark} ADDED BY OPP ####"
         state: present
-    - name: 使用 dnf 安装必要的依赖包
+    - name: dnf
       dnf:
         name:
           - gcc
