--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -52,11 +52,11 @@
           - libtdb-devel
           - libxml2-devel
         state: present
-        tags: install_dnf_package
+      tags: install_dnf_package
     - name: add squid account
       ansible.builtin.user:
         name: squid
         shell: /sbin/nologin
         system: yes
         state: present
-        tags: add_squid_user
+      stags: add_squid_user
