--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -62,13 +62,13 @@
       tags: add_squid_user
     - name: create software dir
       ansible.builtin.file:
-        path: /usr/deploy/software
+        path: /fsbackup/software
         state: directory
       tags: create_software_dir
     - name: download squid
       ansible.builtin.get_url:
-        url: http://www.squid-cache.org/Versions/v6/squid-6.11.tar.gz
-        dest: /usr/deploy/software/squid-6.11.tar.gz
+        url: https://www.squid-cache.org/Versions/v6/squid-6.11.tar.gz
+        dest: /fsbackup/software/squid-6.11.tar.gz
       environment:
         GAI_STRATEGY: pf_inet
       tags: download_squid
