--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -65,10 +65,8 @@
         path: /fsbackup/software
         state: directory
       tags: create_software_dir
-    - name: download squid
-      ansible.builtin.get_url:
-        url: https://www.squid-cache.org/Versions/v6/squid-6.11.tar.gz
-        dest: /fsbackup/software/squid-6.11.tar.gz
-      environment:
-        GAI_STRATEGY: pf_inet
+    - name: Download using curl if get_url fails
+      ansible.builtin.shell:
+        cmd: "curl -4 -L -o /fsbackup/software/squid-6.11.tar.gz https://www.squid-cache.org/Versions/v6/squid-6.11.tar.gz"
+        creates: /fsbackup/software/squid-6.11.tar.gz
       tags: download_squid
