--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -142,7 +142,6 @@
             --with-swapdir=/opt/squid/var/spool/squid
       args:
         chdir: "{{ software_dest_path }}/squid-6.11"
-        creates: /opt/squid
     - name: squid-compile
       shell: make && make install
       args:
@@ -239,6 +238,30 @@
         src: "{{ software_dest_path }}/nginx-1.2.5.tar.gz"
         dest: "{{ software_dest_path }}"
         remote_src: yes
+    - name: nginx-configure
+      shell: |
+        ./configure --user=nginx --group=nginx --prefix=/usr/nginx \
+            --with-cc-opt=-O2 \
+            --with-http_ssl_module \
+            --with-http_v2_module \
+            --with-http_sub_module \
+            --with-http_stub_status_module \
+            --with-threads \
+            --with-compat \
+            --add-module=../headers-more-nginx-module \
+            --sbin-path=/usr/nginx/sbin/nginx \
+            --conf-path=/usr/nginx/conf/nginx.conf \
+            --with-stream \
+            --without-pcre2 \
+            --with-stream_ssl_module \
+            --with-stream_ssl_preread_module
+      args:
+        chdir: "{{ software_dest_path }}/nginx-1.2.5"
+    - name: nginx-compile
+      shell: make && make install
+      args:
+        chdir: "{{ software_dest_path }}/nginx-1.2.5"
+        creates: /usr/nginx
   handlers:
       - name: reload systemd
         ansible.builtin.systemd:
