--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -307,6 +307,17 @@
         state: started
         enabled: yes
       tags: nginx_service_start
+    - name: add www-group
+      ansible.builtin.group:
+        name: www-group
+        state: present
+      tags: add_www_group
+    - name: add nginx to www-group
+      ansible.builtin.user:
+        name: nginx
+        groups: www-group
+        append: yes
+      tags: add nginx_www_group
   handlers:
       - name: reload systemd
         ansible.builtin.systemd:
