--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -3,6 +3,10 @@
   hosts: opp_prod
   gather_facts: no
   vars:
+    proxy_env:
+      http_proxy: "http://192.168.189.195:8080"
+      https_proxy: "http://192.168.189.195:8080"
+      NO_PROXY: "localhost,127.0.0.1"
     software_src_path: "/fsbackup/download"
     software_dest_path: "/fsbackup/download"
   tasks:
@@ -343,6 +347,7 @@
           - https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
           - https://rpms.remirepo.net/enterprise/remi-release-8.rpm
         state: present
+        environment: "{{ proxy_env }}"
         disable_gpg_check: yes
       become: yes
       tags: install_repo
